[gd_scene load_steps=51 format=2]

[ext_resource path="res://src/Player.gd" type="Script" id=1]
[ext_resource path="res://src/MainMenu/button_hover.tres" type="Texture" id=2]
[ext_resource path="res://assets/john_spritesheet.png" type="Texture" id=3]
[ext_resource path="res://src/Draw.gd" type="Script" id=4]
[ext_resource path="res://src/TileMap.gd" type="Script" id=5]
[ext_resource path="res://src/HUD.gd" type="Script" id=6]
[ext_resource path="res://src/Viewport.gd" type="Script" id=7]
[ext_resource path="res://src/DeathSound.gd" type="Script" id=8]
[ext_resource path="res://assets/sfx/death noise.wav" type="AudioStream" id=9]
[ext_resource path="res://assets/dog.png" type="Texture" id=10]
[ext_resource path="res://src/Levels.gd" type="Script" id=11]
[ext_resource path="res://src/Main.gd" type="Script" id=12]
[ext_resource path="res://assets/overgroundtop.png" type="Texture" id=13]
[ext_resource path="res://assets/undergroundtop.png" type="Texture" id=14]
[ext_resource path="res://src/DecorationsCanvas.gd" type="Script" id=15]
[ext_resource path="res://src/MainMenu/top_tab.tres" type="Texture" id=16]
[ext_resource path="res://assets/UI_spritesheet.png" type="Texture" id=17]
[ext_resource path="res://src/TopTab.gd" type="Script" id=18]
[ext_resource path="res://assets/sfx/carrot eaten.wav" type="AudioStream" id=19]
[ext_resource path="res://src/moleSound.gd" type="Script" id=20]
[ext_resource path="res://assets/music/levels_and_countdown_final.mp3" type="AudioStream" id=21]
[ext_resource path="res://src/GameAudio.gd" type="Script" id=22]
[ext_resource path="res://assets/sfx/mole sound.wav" type="AudioStream" id=23]
[ext_resource path="res://src/DogEating.gd" type="Script" id=24]
[ext_resource path="res://assets/sfx/dog eating.wav" type="AudioStream" id=25]
[ext_resource path="res://assets/tilemap_uw.png" type="Texture" id=26]
[ext_resource path="res://src/MainMenu/button.tres" type="Texture" id=27]
[ext_resource path="res://src/CarrotEaten.gd" type="Script" id=28]
[ext_resource path="res://assets/fonts/ChalkBig.tres" type="DynamicFont" id=29]
[ext_resource path="res://assets/tilemap_ow.png" type="Texture" id=30]
[ext_resource path="res://assets/sfx/movement.wav" type="AudioStream" id=31]
[ext_resource path="res://assets/fonts/ChalkRegular.tres" type="DynamicFont" id=32]
[ext_resource path="res://src/MoveSound.gd" type="Script" id=33]

[sub_resource type="TileSet" id=23]
0/name = "tilemap_ow.png 0"
0/texture = ExtResource( 30 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 512, 512 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0
1/name = "tilemap_ow.png 1"
1/texture = ExtResource( 30 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 0, 512, 512, 512 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0
2/name = "tilemap_ow.png 2"
2/texture = ExtResource( 30 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 0, 1024, 512, 512 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape_one_way = false
2/shape_one_way_margin = 0.0
2/shapes = [  ]
2/z_index = 0

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 512, 512 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 512, 0, 512, 512 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 512, 512, 512 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 512, 512, 512, 512 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 10 ) ],
"loop": true,
"name": "dead",
"speed": 5.0
}, {
"frames": [ SubResource( 6 ), SubResource( 7 ) ],
"loop": true,
"name": "overworld",
"speed": 5.0
}, {
"frames": [ SubResource( 8 ), SubResource( 9 ) ],
"loop": true,
"name": "underworld",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 32, 32 )

[sub_resource type="World" id=5]

[sub_resource type="TileSet" id=22]
0/name = "tilemap_uw.png 0"
0/texture = ExtResource( 26 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 512, 512 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0

[sub_resource type="AtlasTexture" id=24]
flags = 4
atlas = ExtResource( 17 )
region = Rect2( 0, 200, 200, 200 )

[sub_resource type="AtlasTexture" id=25]
flags = 4
atlas = ExtResource( 17 )
region = Rect2( 200, 200, 200, 200 )

[sub_resource type="AtlasTexture" id=26]
flags = 4
atlas = ExtResource( 17 )
region = Rect2( 400, 200, 200, 200 )

[sub_resource type="AtlasTexture" id=27]
flags = 4
atlas = ExtResource( 17 )
region = Rect2( 600, 200, 200, 200 )

[sub_resource type="AtlasTexture" id=28]
flags = 4
atlas = ExtResource( 17 )
region = Rect2( 800, 200, 200, 200 )

[sub_resource type="AtlasTexture" id=29]
flags = 4
atlas = ExtResource( 17 )
region = Rect2( 800, 400, 200, 200 )

[sub_resource type="SpriteFrames" id=15]
animations = [ {
"frames": [ SubResource( 24 ), SubResource( 25 ), SubResource( 26 ), SubResource( 27 ), SubResource( 28 ), SubResource( 29 ) ],
"loop": true,
"name": "default",
"speed": 6.0
} ]

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 576, 320 )

[node name="Main" type="Node2D"]
script = ExtResource( 12 )
current_level = 4
LEVEL = 0

[node name="TileMap" type="TileMap" parent="."]
position = Vector2( 264, 220 )
scale = Vector2( 0.25, 0.25 )
tile_set = SubResource( 23 )
cell_size = Vector2( 512, 512 )
cell_quadrant_size = 64
format = 1
tile_data = PoolIntArray( -1, 0, 0, -65536, 0, 0, -65535, 0, 0, -65534, 0, 0, -65533, 0, 0, -65532, 0, 0, -65531, 0, 0, -65530, 0, 0, -65529, 0, 0, -65528, 0, 0, -65527, 0, 0, 65535, 0, 0, 0, 1, 0, 1, 1, 0, 2, 1, 0, 3, 1, 0, 4, 1, 0, 5, 1, 0, 6, 1, 0, 7, 1, 0, 8, 1, 0, 9, 0, 0, 131071, 0, 0, 65536, 1, 0, 65537, 1, 0, 65538, 1, 0, 65539, 1, 0, 65540, 1, 0, 65541, 1, 0, 65542, 1, 0, 65543, 1, 0, 65544, 1, 0, 65545, 0, 0, 196607, 0, 0, 131072, 1, 0, 131073, 1, 0, 131074, 1, 0, 131075, 1, 0, 131076, 1, 0, 131077, 1, 0, 131078, 1, 0, 131079, 1, 0, 131080, 1, 0, 131081, 0, 0, 262143, 0, 0, 196608, 1, 0, 196609, 1, 0, 196610, 1, 0, 196611, 1, 0, 196612, 1, 0, 196613, 1, 0, 196614, 1, 0, 196615, 1, 0, 196616, 1, 0, 196617, 0, 0, 327679, 0, 0, 262144, 1, 0, 262145, 1, 0, 262146, 1, 0, 262147, 1, 0, 262148, 2, 0, 262149, 1, 0, 262150, 1, 0, 262151, 1, 0, 262152, 1, 0, 262153, 0, 0, 393215, 0, 0, 327680, 0, 0, 327681, 0, 0, 327682, 0, 0, 327683, 0, 0, 327684, 0, 0, 327685, 0, 0, 327686, 0, 0, 327687, 0, 0, 327688, 0, 0, 327689, 0, 0 )
script = ExtResource( 5 )

[node name="Player" type="Area2D" parent="."]
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="Player"]
position = Vector2( 64, 64 )
scale = Vector2( 0.25, 0.25 )
frames = SubResource( 3 )
animation = "dead"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
position = Vector2( 64, 64 )
scale = Vector2( 2, 2 )
shape = SubResource( 2 )

[node name="DeathTimer" type="Timer" parent="Player"]
wait_time = 4.0
one_shot = true

[node name="StartPosition" type="Position2D" parent="."]
position = Vector2( 776, 732 )

[node name="Viewport" type="Viewport" parent="."]
size = Vector2( 1680, 1050 )
world = SubResource( 5 )
script = ExtResource( 7 )

[node name="MainCamera" type="Camera2D" parent="Viewport"]
anchor_mode = 0
current = true

[node name="StartTimer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[node name="HUD" type="CanvasLayer" parent="."]
layer = 2
script = ExtResource( 6 )

[node name="NextButton" type="TextureButton" parent="HUD"]
margin_left = 1223.0
margin_top = 788.0
margin_right = 1623.0
margin_bottom = 988.0
texture_normal = ExtResource( 27 )
texture_pressed = ExtResource( 2 )
texture_hover = ExtResource( 2 )

[node name="CanvasLayer" type="CanvasLayer" parent="HUD/NextButton"]
layer = 5

[node name="NextButtonLabel" type="Label" parent="HUD/NextButton/CanvasLayer"]
margin_left = 1228.0
margin_top = 797.0
margin_right = 1612.0
margin_bottom = 973.0
custom_fonts/font = ExtResource( 29 )
text = "Next"
align = 1
valign = 1

[node name="StartButton" type="TextureButton" parent="HUD"]
margin_left = 53.0
margin_top = 140.0
margin_right = 453.0
margin_bottom = 340.0
texture_normal = ExtResource( 27 )
texture_pressed = ExtResource( 2 )
texture_hover = ExtResource( 2 )

[node name="CanvasLayer" type="CanvasLayer" parent="HUD/StartButton"]
layer = 5

[node name="StartButtonLabel" type="Label" parent="HUD/StartButton/CanvasLayer"]
margin_left = 50.0
margin_top = 140.0
margin_right = 442.0
margin_bottom = 334.0
custom_fonts/font = ExtResource( 29 )
text = "Start"
align = 1
valign = 1

[node name="SideTab" type="CanvasLayer" parent="HUD"]
layer = 2

[node name="sideTab" type="TileMap" parent="HUD/SideTab"]
scale = Vector2( 0.25, 0.25 )
z_index = 1
tile_set = SubResource( 22 )
cell_size = Vector2( 512, 512 )
format = 1
tile_data = PoolIntArray( 0, 0, 0, 1, 0, 0, 2, 0, 0, 3, 0, 0, 65536, 0, 0, 65537, 0, 0, 65538, 0, 0, 65539, 0, 0, 131072, 0, 0, 131073, 0, 0, 131074, 0, 0, 131075, 0, 0, 196608, 0, 0, 196609, 0, 0, 196610, 0, 0, 196611, 0, 0, 262144, 0, 0, 262145, 0, 0, 262146, 0, 0, 262147, 0, 0, 327680, 0, 0, 327681, 0, 0, 327682, 0, 0, 327683, 0, 0, 393216, 0, 0, 393217, 0, 0, 393218, 0, 0, 393219, 0, 0, 458752, 0, 0, 458753, 0, 0, 458754, 0, 0, 458755, 0, 0, 524288, 0, 0, 524289, 0, 0, 524290, 0, 0, 524291, 0, 0 )

[node name="ColorRect" type="ColorRect" parent="HUD/SideTab"]
margin_right = 523.0
margin_bottom = 1151.0
mouse_filter = 2

[node name="TopTab" type="CanvasLayer" parent="HUD"]
layer = 2
script = ExtResource( 18 )

[node name="CountdownTab" type="CanvasLayer" parent="HUD/TopTab"]
layer = 3

[node name="CountdownLabel" type="Label" parent="HUD/TopTab/CountdownTab"]
margin_left = 804.0
margin_top = -61.0
margin_right = 999.0
margin_bottom = 193.0
rect_scale = Vector2( 1.1788, 1.1788 )
custom_fonts/font = ExtResource( 29 )
align = 1
valign = 1

[node name="AnimatedSprite" type="AnimatedSprite" parent="HUD/TopTab/CountdownTab"]
position = Vector2( 723, 90 )
scale = Vector2( 0.861929, 0.861929 )
z_index = 1
frames = SubResource( 15 )

[node name="Goal" type="CanvasLayer" parent="HUD/TopTab"]
layer = 3

[node name="GoalLabel" type="Label" parent="HUD/TopTab/Goal"]
margin_left = 566.0
margin_top = -2.0
margin_right = 1072.0
margin_bottom = 169.0
custom_fonts/font = ExtResource( 32 )
align = 1
valign = 1
autowrap = true

[node name="TextureRect" type="TextureRect" parent="HUD/TopTab"]
margin_left = 540.0
margin_top = -7.0
margin_right = 1340.0
margin_bottom = 393.0
rect_scale = Vector2( 0.704196, 0.814354 )
texture = ExtResource( 16 )

[node name="Levels" type="Node2D" parent="."]
script = ExtResource( 11 )

[node name="DecorationsCanvas" type="CanvasLayer" parent="."]
script = ExtResource( 15 )

[node name="OvergroundTexture" type="TextureRect" parent="DecorationsCanvas"]
margin_right = 40.0
margin_bottom = 40.0
mouse_filter = 2
texture = ExtResource( 13 )

[node name="UndergroundTexture" type="TextureRect" parent="DecorationsCanvas"]
margin_right = 40.0
margin_bottom = 40.0
mouse_filter = 2
texture = ExtResource( 14 )

[node name="Draw" type="Area2D" parent="."]
script = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Draw"]
position = Vector2( 836, 540 )
shape = SubResource( 10 )

[node name="DeathSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
volume_db = -3.496
script = ExtResource( 8 )

[node name="MoveSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 31 )
script = ExtResource( 33 )

[node name="CarrotEaten" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 19 )
script = ExtResource( 28 )

[node name="MoleSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 23 )
script = ExtResource( 20 )

[node name="GameAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 21 )
volume_db = -6.992
script = ExtResource( 22 )

[node name="DogEating" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 25 )
script = ExtResource( 24 )

[connection signal="carrot_eaten" from="." to="CarrotEaten" method="_on_Main_carrot_eaten"]
[connection signal="game_start" from="." to="GameAudio" method="_on_Main_game_start"]
[connection signal="overground" from="." to="." method="_on_Main_overground"]
[connection signal="overground" from="." to="TileMap" method="overground"]
[connection signal="starting_timer" from="." to="HUD/TopTab" method="_on_Main_starting_timer"]
[connection signal="underground" from="." to="." method="_on_Main_underground"]
[connection signal="underground" from="." to="TileMap" method="underground"]
[connection signal="win" from="." to="." method="_on_Main_win"]
[connection signal="area_entered" from="Player" to="Player" method="_on_Player_area_entered"]
[connection signal="died" from="Player" to="DeathSound" method="_on_Player_died"]
[connection signal="died_by_dog" from="Player" to="DogEating" method="_on_Player_died_by_dog"]
[connection signal="moved" from="Player" to="." method="_on_Player_moved"]
[connection signal="moved" from="Player" to="MoveSound" method="_on_Player_moved"]
[connection signal="moved" from="Player" to="MoleSound" method="_on_Player_moved"]
[connection signal="timeout" from="Player/DeathTimer" to="." method="start_game"]
[connection signal="timeout" from="StartTimer" to="." method="underground"]
[connection signal="timeout" from="StartTimer" to="HUD" method="_on_StartTimer_timeout"]
[connection signal="timeout" from="StartTimer" to="HUD/TopTab" method="_on_StartTimer_timeout"]
[connection signal="start_game" from="HUD" to="." method="start_game"]
[connection signal="pressed" from="HUD/NextButton" to="." method="_on_NextButton_pressed"]
[connection signal="pressed" from="HUD/NextButton" to="HUD/TopTab" method="_on_NextButton_pressed"]
[connection signal="pressed" from="HUD/StartButton" to="HUD" method="_on_StartButton_pressed"]
[connection signal="input_event" from="Draw" to="." method="_on_Draw_input_event"]
[connection signal="input_event" from="Draw" to="Draw" method="_on_Draw_input_event"]
